[package]
name = "video-processor"
version = "1.0.0"
authors = ["Nathaniel Waisbrot <nathaniel@waisbrot.net>"]
edition = "2018"

[dependencies]
rust-crypto = "^0.2"
chrono = "^0.4"
log = "^0.4"
pretty_env_logger = "^0.4"
serde_json = "^1.0"
subprocess = "^0.2"
regex = "^1.1"
lazy_static = "^1.4"
clap = "^2.33"
crossbeam-utils = "^0.7"

[dependencies.postgres]
version = "^0.15"
features = ["with-chrono", "with-serde_json"]

[profile.release]
opt-level = 0
debug = true
panic = 'unwind'
debug-assertions = true
codegen-units = 16
overflow-checks = true
lto = false
incremental = false
